Fix emoji alignment, highlight nofiretalks

--- a/assets/css/style2019.css
+++ b/assets/css/style2019.css
@@ -80,7 +80,9 @@ p, li {
 a {
   color: inherit;
 }
-
+strong {
+    color: #d65f21;
+}
 
 
 /* components */
@@ -115,7 +117,7 @@ a {
   padding: 4px 0;
 }
 .schedule tbody tr td:nth-child(1) {
-  width: 2.4em;
+  width: 3em;
 }
 .schedule tbody tr td:nth-child(2) {
   width: 3.5em;
